--- a/Session 7/task1.html
+++ b/Session 7/task1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Task 1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src='task1.js'></script>
 </head>
